--- a/men.html
+++ b/men.html
@@ -63,7 +63,7 @@
             </a>
 
             <!-- Product 2 -->
-            <a href="https://www.myntra.com/jeans/urbano+fashion/urbano-fashion-mens-ice-blue-loose-baggy-fit-washed-jeans-non-stretchable/30026560/buy">
+            <a href="#">
                 <div class="bg-white p-4 shadow rounded-lg hover:shadow-lg transition card-hover">
                     <img src="jeans.jpg" alt="Jeans" class="h-60 w-full object-cover rounded-product-img mb-2" />
                     <h3 class="text-lg font-semibold">Levi’s Jeans</h3>
@@ -99,7 +99,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-6 mt-12">
         <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
-            <p>&copy; 2025 Myntra Clone. All rights reserved.</p>
+           <p>&copy; 2025 Myntra Clone. BYE AKHILESH BHAGAT.</p>
             <div class="space-x-4 mt-4 md:mt-0">
                 <a href="contact.html" class="footer-link">Contact</a>
                 <a href="terms.html" class="footer-link">Terms</a>
