--- a/terms.html
+++ b/terms.html
@@ -51,7 +51,7 @@
 
   <!-- Footer -->
   <footer class="text-center text-sm text-gray-500 mt-10 py-6">
-   <p>&copy; 2025 Myntra Clone. BYE AKHILESH BHAGAT.</p>
+   <p>&copy; 2025 Myntra Clone. BY AKHILESH BHAGAT.</p>
   </footer>
 
 </body>
