--- a/cart.html
+++ b/cart.html
@@ -81,7 +81,7 @@
     <!-- 📞 Footer -->
     <footer class="bg-gray-900 text-white py-6 mt-12">
         <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
-            <p>&copy; 2025 Myntra Clone. BYE AKHILESH BHAGAT.</p>
+            <p>&copy; 2025 Myntra Clone. BY AKHILESH BHAGAT.</p>
             <div class="space-x-4 mt-4 md:mt-0">
                 <a href="contact.html" class="hover:text-pink-400">Contact</a>
                 <a href="terms.html" class="hover:text-pink-400">Terms</a>
