--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h2 class="text-2xl font-bold mb-6">Shop by Category</h2>
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
 
-    <a href="https://www.myntra.com/shop/men" class="block">
+    <a href="men.html" class="block">
       <div class="bg-white shadow rounded-lg p-4 text-center hover:scale-105 transform transition">
         <img src="img1.jpg" class="rounded-lg h-40 w-full object-cover mb-2">
         <p class="font-medium">Men</p>
